Creation des modèles

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BACK_ServerDeVoeux",
+  "name": "back_serverdevoeux",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
