--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "express": "^4.17.1",
     "express-swagger-generator": "^1.1.17",
     "mongoose": "^5.11.14",
+    "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
-    "mongodb": "^3.6.3"
+    "mongodb": "^3.6.3",
+    "request": "^2.88.2"
   }
 }
