--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   "devDependencies": {
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
-    "mongodb": "^3.6.3",
-    "request": "^2.88.2"
+    "mongodb": "^3.6.3"
   }
 }
