--- a/package.json
+++ b/package.json
@@ -11,17 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-swagger-generator": "^1.1.17",
+    "mongodb": "^3.6.3",
     "mongoose": "^5.11.14",
     "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
-  },
-  "devDependencies": {
-    "bcrypt": "^5.0.0",
-    "mongodb": "^3.6.3"
   }
 }
