--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-swagger-generator": "^1.1.17",
+    "https": "^1.0.0",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.14",
     "node-fetch": "^2.6.1",
