--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.14",
     "node-fetch": "^2.6.1",
+    "nodemailer": "^6.4.18",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
   }
